--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
     <input type="text" id="searchBar" placeholder="제목으로 검색하기...">
 
 
+    <div class="itemList longCardList">
+  <a href="https://link.coupang.com/a/cJ6Acs" class="item" target="_blank">
+        <img src="images/004.png" alt="아이템4">
+        <div>
+        <h4>티파니 샤넬 저렴이 아이섀도우</h4>
+        <p>[004] 3CE 레이어 잇 올 아이팔레트 01 로지 힙</p>
+        </div>
+      </a>
 
+<a href="https://link.coupang.com/a/cJ6BS0" class="item" target="_blank">
+        <img src="images/003.png" alt="아이템3">
+        <div>
+        <h4>티파니 샤넬 저렴이 아이섀도우</h4>
+        <p>[003] 컬러그램 눈토리얼 아이 팔레트 09 오트 더하기 피치는 사랑</p>
+        </div>
+      </a>
+</div>
 
-
-
-
-
-    <div id="itemList">
+    <div class="itemList">
       <a href="https://link.coupang.com/a/cJ0rkD" class="item" target="_blank">
-        <img src="images/002.png" alt="아이템1">
+        <img src="images/002.png" alt="아이템2">
         <div>
         <h4>티파니가 음영 넣을 때 쓰는 아이섀도우</h4>
         <p>[002] 샤넬 아이섀도우 레 꺄트르 옹브르 308호 끌레르 옵스뀌</p>
@@ -30,7 +42,7 @@
       </a>
     </div>
 
-    <div id="itemList">
+    <div class="itemList">
       <a href="https://link.coupang.com/a/cJ0pYD" class="item" target="_blank">
         <img src="images/001.png" alt="아이템1">
         <div>
