--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
     <input type="text" id="searchBar" placeholder="제목으로 검색하기...">
 
 
+
+
+
+<div class="itemList">
+      <a href="https://link.coupang.com/a/cYDwgf" class="item" target="_blank">
+        <img src="images/005.png" alt="아이템5">
+        <div>
+        <h4>강한나가 사랑하는 바디워</h4>
+        <p>[005] 샤넬 아이섀도우 레 꺄트르 옹브르 308호 끌레르 옵스뀌</p>
+        </div>
+      </a>
+    </div>
+    
+
+
+
+
+
+    
     <div class="itemList longCardList">
   <a href="https://link.coupang.com/a/cJ6Acs" class="item" target="_blank">
         <img src="images/004.png" alt="아이템4">
@@ -87,3 +106,4 @@
 
 </body>
 </html>
+
