--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <a href="https://link.coupang.com/a/cYDwgf" class="item" target="_blank">
         <img src="images/005.png" alt="아이템5">
         <div>
-        <h4>강한나가 사랑하는 바디워</h4>
-        <p>[005] 샤넬 아이섀도우 레 꺄트르 옹브르 308호 끌레르 옵스뀌</p>
+        <h4>강한나가 사랑하는 바디워시</h4>
+        <p>[005] 바이레도 라튤립 (LA TULIPE) 바디워시 샤워젤</p>
         </div>
       </a>
     </div>
@@ -106,4 +106,5 @@
 
 </body>
 </html>
+
 
